Fix right alignment bug in Chrome.

--- a/src/components/ConfirmationModal/_confirmation-modal.scss
+++ b/src/components/ConfirmationModal/_confirmation-modal.scss
@@ -3,7 +3,7 @@
 #confirmation-modal-container {
   .p-modal {
     align-items: flex-end;
-    justify-content: right;
+    justify-content: flex-end;
     z-index: z("zelda");
 
     h5 {
